--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1>GoBizNow.com</h1>
       <p class="sub-title" style="color: #f5da0f;"><strong>Domain with 21 Years History!</strong></p> 
 	<p>Like this domain?</p>
-	 <p>Check our offer at Sedo.com:</p>
+	 <p>Check our offer at Sedo.com</p>
 
 	
           
